--- a/index.html
+++ b/index.html
@@ -34,89 +34,119 @@
 <body>
 <div class="container view-index">
     <header class="col-xs-12 no-padding">
-        <div class="header-firstrow col-xs-5 no-padding pull-right">
-            <ul class="col-xs-12 no-padding ul-firstrow">
-                <li class="col-xs-3">
-                    <a href="" class="ff-lato">Login</a>
-                </li>
-                <li class="col-xs-3">
-                    <a href="" class="ff-lato">Sacola <i class="fa fa-shopping-bag"></i></a>
-                </li>
-                <li class="col-xs-5 no-padding-right">
-                    <input class="col-xs-12 input-busca" type="text" name="busca" placeholder="buscar no site">
-                </li>
-                <li class="col-xs-1 no-padding li-lupa">
-                    <i class="fa fa-search"></i>
-                </li>
-            </ul>
-        </div>
-        <div class="header-firstrow left col-xs-7 no-padding pull-left">
-            <ul class="col-xs-12 no-padding ul-firstrow">
-                <li class="col-xs-4 ff-lato vantagens">
-                    Frete Grátis <i class="fa fa-truck"></i>
-                </li>
-                <li class="col-xs-4 ff-lato vantagens">
-                    Troca Garantida <i class="fa fa-exchange"></i>
-                </li>
-                <li class="col-xs-4 ff-lato vantagens">
-                    Tamanhos Variados <i class="fa fa-tags"></i>
-                </li>
-            </ul>
-        </div>
-
-        <div class="col-xs-12 no-padding logo-box">
-            <div class="col-xs-6 no-padding">
-                <img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo">
+        <!-- DESKTOP HEADER -->
+        <div class="desktop-header col-xs-12 no-padding hidden-xs hidden-sm">
+            <div class="header-firstrow col-xs-5 no-padding pull-right">
+                <ul class="col-xs-12 no-padding ul-firstrow">
+                    <li class="col-xs-3">
+                        <a href="" class="ff-lato">Login</a>
+                    </li>
+                    <li class="col-xs-3">
+                        <a href="" class="ff-lato">Sacola <i class="fa fa-shopping-bag"></i></a>
+                    </li>
+                    <li class="col-xs-5 no-padding-right">
+                        <input class="col-xs-12 input-busca" type="text" name="busca" placeholder="buscar no site">
+                    </li>
+                    <li class="col-xs-1 no-padding li-lupa">
+                        <i class="fa fa-search"></i>
+                    </li>
+                </ul>
             </div>
-            <div class="col-xs-6 no-padding redes-sociais">
-                <ul class="col-xs-12 no-padding">
-                    <li class="col-xs-12">
-                        <a href="" target="_blank"><i class="fa fa-facebook-square transition"></i></a>
+            <div class="header-firstrow left col-xs-7 no-padding pull-left">
+                <ul class="col-xs-12 no-padding ul-firstrow">
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Frete Grátis <i class="fa fa-truck"></i>
                     </li>
-                    <li class="col-xs-12">
-                        <a href="" target="_blank"><i class="fa fa-instagram transition"></i></a>
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Troca Garantida <i class="fa fa-exchange"></i>
                     </li>
-                    <li class="col-xs-12">
-                        <a href="" target="_blank"><i class="fa fa-pinterest transition"></i></a>
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Tamanhos Variados <i class="fa fa-tags"></i>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="col-xs-12 no-padding logo-box">
+                <div class="col-xs-6 no-padding">
+                    <img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo">
+                </div>
+                <div class="col-xs-6 no-padding redes-sociais">
+                    <ul class="col-xs-12 no-padding">
+                        <li class="col-xs-12">
+                            <a href="" target="_blank"><i class="fa fa-facebook-square transition"></i></a>
+                        </li>
+                        <li class="col-xs-12">
+                            <a href="" target="_blank"><i class="fa fa-instagram transition"></i></a>
+                        </li>
+                        <li class="col-xs-12">
+                            <a href="" target="_blank"><i class="fa fa-pinterest transition"></i></a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-xs-12 no-padding bg-white">
+                <ul class="col-xs-12 no-padding ul-menu pull-right">
+                    <a href="index.html" class="no-padding">
+                        <li class="col-xs-2  transition ff-lato">
+                            Home 
+                        </li>
+                    </a>
+                    <a href="camisetas.html" class="no-padding">
+                        <li class="col-xs-2  transition ff-lato">
+                            Camisetas 
+                        </li>
+                    </a>
+                    <a href="uptoyou.html" class="no-padding">
+                        <li class="col-xs-2  transition ff-lato">
+                            Up to You 
+                        </li>
+                    </a>
+                    <a href="girlgang.html" class="no-padding">
+                        <li class="col-xs-2  transition ff-lato">
+                            Girl Gang <i class="fa fa-venus"></i>
+                        </li>
+                    </a>
+                    <a href="mural.html" class="no-padding">
+                        <li class="col-xs-2  transition ff-lato">
+                            Mural 
+                        </li>
+                    </a>
+                    <a href="sobre.html" class="no-padding">
+                        <li class="col-xs-2  transition ff-lato">
+                            Sobre a Canvas
+                        </li>
+                    </a>
+                </ul>
+            </div>
+        </div>
+        <!-- DESKTOP HEADER END -->
+
+        <!-- MOBILE HEADER -->
+        <div class="mobile-header col-xs-12 no-padding hidden-md hidden-lg">
+            <div class="col-xs-12 no-padding">
+                <center>
+                    <img src="public/img/canvaslogo2.png" class="imglogo no-padding img-responsive" title="Canvas Logo" alt="Canvas Logo">
+                </center>
+            </div>
+            <div class="menu-box">
+                <i class="fa fa-bars"></i>
+            </div>
+            <div class="features-box col-xs-12 no-padding">
+                <ul class="col-xs-12 no-padding ul-firstrow">
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Frete Grátis <i class="fa fa-truck"></i>
+                    </li>
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Troca Garantida <i class="fa fa-exchange"></i>
+                    </li>
+                    <li class="col-xs-4 ff-lato vantagens">
+                        Tamanhos Variados <i class="fa fa-tags"></i>
                     </li>
                 </ul>
             </div>
         </div>
-
-        <div class="col-xs-12 no-padding bg-white">
-            <ul class="col-xs-12 no-padding ul-menu pull-right">
-                <a href="index.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Home 
-                    </li>
-                </a>
-                <a href="camisetas.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Camisetas 
-                    </li>
-                </a>
-                <a href="uptoyou.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Up to You 
-                    </li>
-                </a>
-                <a href="girlgang.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Girl Gang <i class="fa fa-venus"></i>
-                    </li>
-                </a>
-                <a href="mural.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Mural 
-                    </li>
-                </a>
-                <a href="sobre.html" class="no-padding">
-                    <li class="col-xs-2  transition ff-lato">
-                        Sobre a Canvas
-                    </li>
-                </a>
-            </ul>
-        </div>
+        <!-- MOBILE HEADER END -->
     </header>
 
     <div class="col-xs-12 no-padding">
@@ -124,13 +154,13 @@
 
             <div class="carousel-inner" role="listbox">
                 <div class="item active">
-                    <img src="public/img/ban1.png" alt="...">
+                    <img src="public/img/ban1.png" alt="Banner Camisetas">
                 </div>
                 <div class="item">
-                    <img src="public/img/ban2.png" alt="...">
+                    <img src="public/img/ban2.png" alt="Banner Camisetas 2">
                 </div>
                 <div class="item">
-                    <img src="public/img/ban3.png" alt="...">
+                    <img src="public/img/ban3.png" alt="Banner Girl Gang">
                 </div>
             </div>
 
@@ -151,28 +181,28 @@
             <p class="ff-lato sub-frase">Por: Henrietta Harris</p>
         </div>
         <ul class="col-xs-12 no-padding"> 
-            <li class="item-prod col-xs-3 estampas-box transition">
+            <li class="item-prod col-xs-6 col-sm-6 col-md-3 col-lg-3 estampas-box transition">
                 <div class="imgLiquid imgLiquidFill img-estampas">
                     <a href="">
                         <img src="public/img/estampa1.jpg" class="img-responsive transition" alt="Estampa 1" title="Estampa 1">
                     </a>
                 </div>
             </li>
-            <li class="item-prod col-xs-3 estampas-box transition">
+            <li class="item-prod col-xs-6 col-sm-6 col-md-3 col-lg-3 estampas-box transition">
                 <div class="imgLiquid imgLiquidFill img-estampas">
                     <a href="">
                         <img src="public/img/estampa2.jpg" class="img-responsive transition" alt="Estampa 2" title="Estampa 2">
                     </a>
                 </div>
             </li>
-            <li class="item-prod col-xs-3 estampas-box transition">
+            <li class="item-prod col-xs-6 col-sm-6 col-md-3 col-lg-3 estampas-box transition">
                 <div class="imgLiquid imgLiquidFill img-estampas">
                     <a href="">
                         <img src="public/img/estampa3.jpg" class="img-responsive transition" alt="Estampa 3" title="Estampa 3">
                     </a>
                 </div>
             </li>
-            <li class="item-prod col-xs-3 estampas-box transition">
+            <li class="item-prod col-xs-6 col-sm-6 col-md-3 col-lg-3 estampas-box transition">
                 <div class="imgLiquid imgLiquidFill img-estampas">
                     <a href="">
                         <img src="public/img/estampa4.jpg" class="img-responsive transition" alt="Estampa 4" title="Estampa 4">
@@ -325,46 +355,45 @@
             </li>
         </ul>
     </section>
-
 </div>
 
 <footer class="col-xs-12 no-padding">
     <div class="container">
         <div class="conteudo-footer col-xs-12 no-padding">
-            <div class="detalhe-cima col-xs-12 no-padding">
+            <div class="detalhe-cima col-xs-12 no-padding hidden-xs hidden-sm">
                 <div class="detalhe-complemento cima"></div>
             </div>
             
             <img src="public/img/canvaslogo2.png" class="logo-footer no-padding img-responsive center-block" alt="Canvas Logo Footer" title="Canvas Logo Footer">
             <ul class="col-xs-12 no-padding">
-                <a href="" class="col-xs-2 no-padding transition">
+                <a href="" class="col-xs-4 col-sm-4 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Segurança
                     </li>
                 </a>
-                <a href="" class="col-xs-2 no-padding transition">
+                <a href="" class="col-xs-4 col-sm-4 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Pagamento
                     </li>
                 </a>
-                <a href="" class="col-xs-3 no-padding transition">
+                <a href="" class="col-xs-4 col-sm-4 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Política de Privacidade
                     </li>
                 </a>
-                <a href="" class="col-xs-3 no-padding transition">
+                <a href="" class="col-xs-4 col-sm-4 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Trocas e Devoluções
                     </li>
                 </a>
-                <a href="" class="col-xs-2 no-padding transition">
+                <a href="" class="col-xs-4 col-sm-4 col-md-2 col-lg-2 no-padding transition">
                     <li class="ff-lato col-xs-12 no-padding">
                         Contato
                     </li>
                 </a>
             </ul>
 
-            <div class="detalhe-baixo col-xs-12 no-padding">
+            <div class="detalhe-baixo col-xs-12 no-padding hidden-xs hidden-sm">
                 <div class="detalhe-complemento baixo"></div>
             </div>
         </div>
